--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,8 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
+            "brokeredServicePipeName": "undefined"
+
         },
 
         {
@@ -27,6 +29,8 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
+            "brokeredServicePipeName": "undefined"
+
         },
 
         {
@@ -40,6 +44,7 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
+            "brokeredServicePipeName": "undefined"
         },
 
         {
@@ -53,6 +58,7 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
+            "brokeredServicePipeName": "undefined"
         },
 
         {
@@ -66,6 +72,7 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
+            "brokeredServicePipeName": "undefined"
         },
 
         {
@@ -79,6 +86,7 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
+            "brokeredServicePipeName": "undefined"
         },
 
         {
